merge: block/item/blockentity/machine/part packages (thunderbolt dedup, 83 forge-only files restored)